--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                 </button>
             </div>
         </nav>
+        <div class="location">
+            <div class="location-subcontainer">
+                <div class="delivery-time">Delivery in 13 minutes</div>
+                <div class="location-area">Delhi, India <i class="fa-solid fa-caret-down"></i></div>
+            </div>
+        </div>
         <div class="search-bar">
             <i class="fa-solid fa-magnifying-glass pe-2"></i>
             <input type="text" placeholder='search "butter"' />
@@ -72,7 +78,7 @@
     <main>
         <div class="hero-section-1">
             <img src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=1440/layout-engine/2022-05/Group-33704.jpg"
-                alt="paan corner banner" width="84%" height="234.8623853211009" loading="eager"
+                alt="paan corner banner" height="234.8623853211009" loading="eager"
                 style="border-radius: 0px; object-fit: fill; cursor: default;">
         </div>
 
